@@ -188,7 +188,7 @@ public class DriverWrapper implements Driver {
     static Driver getDriver() {
         if(driver == null) {
             try {
-                driver = (Driver)Class.forName(driverName, true, Thread.currentThread().getContextClassLoader()).newInstance();
+                driver = (Driver)Class.forName(driverName, true, Thread.currentThread().getContextClassLoader()).getConstructor().newInstance();
             } catch (Exception ex) {
                 throw new TestProblemException("DriverWrapper: failed to instantiate " + driverName, ex);
             }
