@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -616,7 +616,7 @@ public class TestExecutor {
 
             //        executor.handleErrors();
             //        executor.doNotLogResults();
-            executor.execute((TestEntity)Class.forName(arguments[0]).newInstance());
+            executor.execute((TestEntity)Class.forName(arguments[0]).getConstructor().newInstance());
         } catch (Throwable exception) {
             System.out.println(exception.toString());
         }
